src/FinancialForce Accounting/objects/codaAgedAnalysisDef__c.object
<CustomObject>
    <customHelpPage>codahelpagedanalysisdef</customHelpPage>
    <description>Defines the presentation of  a specific type of aged analysis report.</description>
    <fields>
        <fullName>AccountCurrency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DEPRECATED: Account Currency</label>
        <referenceTo>codaAccountingCurrency__c</referenceTo>
        <relationshipLabel>Aged Analysis Definitions</relationshipLabel>
        <relationshipName>AgedAnalysisDefinitions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AgedAnalysisCurrency__c</fullName>
        <label>Aged Analysis Currency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Home</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Account</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AgedAnalysisType__c</fullName>
        <label>Aged Analysis Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Debtors</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Creditors</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AllCurrencies__c</fullName>
        <defaultValue>true</defaultValue>
        <label>All Currencies</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Column10From__c</fullName>
        <label>Column 10 - From</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Column10Name__c</fullName>
        <label>Column 10 Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Column10To__c</fullName>
        <label>Column 10 - To</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Column1From__c</fullName>
        <label>Column 1 - From</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Column1Name__c</fullName>
        <label>Column 1 Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Column1To__c</fullName>
        <label>Column 1 - To</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Column2From__c</fullName>
        <label>Column 2 - From</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Column2Name__c</fullName>
        <label>Column 2 Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Column2To__c</fullName>
        <label>Column 2 - To</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GeneralLedgerAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>General Ledger Account</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>The selected GLA does not exist or is not valid. It must be a corporate GLA.</errorMessage>
            <filterItems>
                <field>codaGeneralLedgerAccount__c.ChartOfAccountsStructure__r.Name</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>codaGeneralLedgerAccount__c.ChartOfAccountsStructure__r.IsCorporate__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Aged Analysis Definitions</relationshipLabel>
        <relationshipName>AgedAnalysisDefinitions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TotalOutstanding__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Total Outstanding</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UnmatchedCash__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Unmatched Cash</label>
        <type>Checkbox</type>
    </fields>
    <label>Aged Analysis Definition</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>AgedAnalysisType__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Aged Analysis Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Aged Analysis Definitions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>